# CST310

./: Dino
Topic 1/Topic1LabQuestion2/: TurtleOpenGL.cpp
Topic 1/sierpinski_gasket_project/: INSTRUCTIONS.txt  gasket_2d_subdivision.cpp
Topic 1/sierpinski_gasket_project_run/: gasket_2d_subdivision
Topic 2/Dino/: Dino.cpp  dinner.cpp
Topic 3/Happy Face/: HappyFace  HappyFace.cpp
Topic 4/: CMakeLists.txt  INSTRUCTIONS.txt  QUICK_REFERENCE.md  README.md  STEP_BY_STEP_GUIDE.md  fragment_shader.glsl  main.cpp  vertex_shader.glsl
Topic1LabQuestion2/: README.md  Topic 1 Lab Question 2.docx  turtle
Week 1/sierpinski_gasket_project/: README.md
Week 2/Dino/: dinner
sierpinski_gasket_project/: INSTRUCTIONS.txt  Makefile  PROJECT_SUMMARY.md  README.md  build_and_run.sh  gasket_2d_random  gasket_2d_random.cpp  gasket_3d_tetrahedron  gasket_3d_tetrahedron.cpp
